--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "5.2.1",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
+    "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.3.17"
   },
