--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.2.1",
+    "rails-ujs": "^5.2.4-4",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
     "vue-select": "^3.10.8",
