--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "vue-loader": "^15.9.5",
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12",
-    "vuetify": "^2.3.17"
+    "vuetify": "^2.3.17",
+    "chart.js": "^2.7.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
