--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,8 +67,5 @@ jobs:
           - "ef:10:5e:cb:36:07:61:73:1c:39:87:68:1a:e0:6c:aa"
     - deploy:
         name: Capistrano deploy
-        command: |
-          if [ "${CIRCLE_BRANCH}" != "master" ]; then
-            exit 0
-          fi
+        command:
           bundle exec cap production deploy     
