--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.2.1",
+    "axios": "^0.21.1",
+    "chart.js": "^2.7.1",
     "rails-ujs": "^5.2.4-4",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12",
-    "vuetify": "^2.3.17",
-    "chart.js": "^2.7.1"
+    "vuetify": "^2.3.17"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
