--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "rails-ujs": "^5.2.4-4",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
+    "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.3.17"
