--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12",
+    "vuejs-paginate": "^2.1.0",
     "vuetify": "^2.4.4"
   },
   "devDependencies": {
