--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.7.1",
     "rails-ujs": "^5.2.4-4",
+    "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
     "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
