--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12",
     "vuejs-paginate": "^2.1.0",
-    "vuetify": "^2.4.4"
+    "vuetify": "^2.4.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
