--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "dependencies": {
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.9.4",
     "rails-ujs": "^5.2.4-5",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-loader": "^15.9.5",
     "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
