--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue-loader": "^15.9.5",
     "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
+    "vue-star": "^0.0.4",
     "vue-template-compiler": "^2.6.12",
     "vuejs-paginate": "^2.1.0",
     "vuetify": "^2.4.4",
