--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-select": "^3.10.8",
     "vue-star": "^0.0.4",
     "vue-template-compiler": "^2.6.12",
+    "vue2-google-maps": "^0.10.7",
     "vuejs-paginate": "^2.1.0",
     "vuetify": "^2.4.4",
     "vuex": "^3.6.2"
