--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample_boad",
   "private": true,
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
