--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12",
     "vue2-google-maps": "^0.10.7",
+    "vuejs-dialog": "^1.4.2",
     "vuejs-paginate": "^2.1.0",
     "vuetify": "^2.4.4",
     "vuex": "^3.6.2"
