--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,10 @@ services:
       - "3000:3000"
     volumes:
       - .:/workdir 
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+    volumes:
+      - "./data/redis:/data"
+    command: bundle exec redis-server /usr/local/etc/redis.conf
