--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
     "vue-chartjs": "^3.5.1",
+    "vue-js-modal": "*",
     "vue-loader": "^15.9.5",
     "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
